style: update style for mobile.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -23,7 +23,7 @@ const { page } = Astro.props;
         <ToggleTheme />
         <main class="container mx-auto w-5/6 lg:w-2/3">
             <AllTags />
-            <h1 class="my-5 text-4xl font-bold">Blog</h1>
+            <h1 class="my-5 text-4xl font-bold"><a href="/blog">Blog</a></h1>
 
             {page.data.map((post) => <BlogPost post={post} />)}
 
