--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,21 +16,21 @@ import { SITE_TITLE } from "../config";
             </p>
             <div class="tooltip tooltip-bottom" data-tip="About Me">
                 <a href="/about">
-                    <button class="btn btn-ghost text-lg">
+                    <button class="btn btn-ghost text-lg" aria-label="About Me">
                         <i class="fa-solid fa-user"></i>
                     </button>
                 </a>
             </div>
             <div class="tooltip tooltip-bottom" data-tip="Blog">
                 <a href="/blog">
-                    <button class="btn btn-ghost text-lg">
+                    <button class="btn btn-ghost text-lg" aria-label="Blog">
                         <i class="fa-solid fa-pencil"></i>
                     </button>
                 </a>
             </div>
             <div class="tooltip tooltip-bottom" data-tip="Project">
                 <a href="/project">
-                    <button class="btn btn-ghost text-lg">
+                    <button class="btn btn-ghost text-lg" aria-label="Project">
                         <i class="fa-solid fa-code"></i>
                     </button>
                 </a>
