--- a/src/pages/tag/[tag].astro
+++ b/src/pages/tag/[tag].astro
@@ -38,7 +38,7 @@ const { posts } = Astro.props;
         <ToggleTheme />
         <main class="container mx-auto w-5/6 lg:w-2/3">
             <AllTags />
-            <h1 class="my-5 text-4xl font-bold">Blog</h1>
+            <h1 class="my-5 text-4xl font-bold"><a href="/blog">Blog</a></h1>
             <h1 class="my-5 text-2xl font-bold">{tag} の記事</h1>
 
             {posts.map((post) => <BlogPost post={post} />)}
