--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ export interface Props {
     description: string;
     image?: string;
 }
-const { title, description, image = "/social_img.jpg" } = Astro.props;
+const { title, description, image = "/blog/new-imokuri-blog.png" } = Astro.props;
 ---
 
 <!-- Global Metadata -->
