--- a/src/pages/blog/[year]/[month]/[slug].astro
+++ b/src/pages/blog/[year]/[month]/[slug].astro
@@ -4,6 +4,7 @@ import Disclaimer from "../../../../components/Disclaimer.astro";
 import Footer from "../../../../components/Footer.astro";
 import NavBar from "../../../../components/NavBar.astro";
 import ToggleTheme from "../../../../components/ToggleTheme.astro";
+import Tweet from "../../../../components/Tweet.astro";
 import Utterances from "../../../../components/Utterances.astro";
 import { CollectionEntry, getCollection } from "astro:content";
 
@@ -91,6 +92,7 @@ const pass_year = Math.floor((today - updated_date) / 86400000 / 365);
                     </div>
                 )
             }
+            <Tweet />
             <hr />
             <Content />
         </article>
