feat: Add TwitterFollow button.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,6 +5,7 @@ import Footer from "../components/Footer.astro";
 import NavBar from "../components/NavBar.astro";
 import TimeLine from "../components/TimeLine.astro";
 import ToggleTheme from "../components/ToggleTheme.astro";
+import TwitterFollow from "../components/TwitterFollow.astro";
 ---
 
 <BaseLayout>
@@ -35,6 +36,7 @@ import ToggleTheme from "../components/ToggleTheme.astro";
 
             <h2 class="my-5 text-2xl font-bold">Contact</h2>
             <img src="/mail.png" alt="email" />
+            <TwitterFollow />
 
             <div class="card card-bordered shadow-lg my-10 bg-base-100">
                 <div class="card-body">
