--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import ToggleTheme from "../components/ToggleTheme.astro";
 import TwitterFollow from "../components/TwitterFollow.astro";
 ---
 
-<BaseLayout>
+<BaseLayout twitter=true>
     <BaseWallpaper>
         <NavBar />
         <ToggleTheme />
