--- a/src/pages/blog/[year]/[month]/[slug].astro
+++ b/src/pages/blog/[year]/[month]/[slug].astro
@@ -29,7 +29,7 @@ const updated_date = updated > date ? updated.getTime() : date.getTime();
 const pass_year = Math.floor((today - updated_date) / 86400000 / 365);
 ---
 
-<BaseLayout>
+<BaseLayout twitter=true>
     <NavBar />
     <ToggleTheme />
     <main class="container mx-auto w-5/6 lg:w-2/3">
