style: update back ground color.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/components/Competition.astro
+++ b/src/components/Competition.astro
@@ -9,7 +9,7 @@ const {
 } = Astro.props;
 ---
 
-<div class="card card-compact w-full bg-base-100 shadow-xl">
+<div class="card card-compact w-full bg-base-100 shadow-lg">
     <figure>
         <img src={image} alt={title} />
     </figure>
