feat: add rss link tag.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,6 +16,7 @@ const {
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <link rel="icon" href="/favicon.ico" />
+<link rel="alternate" type="application/rss+xml" title="RSS2.0" href="/rss.xml" />
 <meta name="viewport" content="width=device-width" />
 <meta name="generator" content={Astro.generator} />
 
