--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -42,8 +42,8 @@ import TwitterFollow from "../components/TwitterFollow.astro";
                 <div class="card-body">
                     <h2 class="card-title text-2xl mb-3">Focus</h2>
                     <div class="time-line-container">
-                        <TimeLine title="Data Management" />
                         <TimeLine title="Machine Learning, Deep Learning" />
+                        <TimeLine title="Data Management" />
                         <TimeLine title="Kubernetes, OpenShift" />
                         <TimeLine title="Ansible" />
                         <TimeLine title="Neovim" />
@@ -57,9 +57,7 @@ import TwitterFollow from "../components/TwitterFollow.astro";
                     <div class="time-line-container">
                         <TimeLine title="Ski" />
                         <TimeLine title="Kaggle" />
-                        <TimeLine title="Shogi - 将棋" />
-                        <TimeLine title="Bon Odori - 盆踊り" />
-                        <TimeLine title="Project Euler" />
+                        <TimeLine title="Quiz" />
                     </div>
                 </div>
             </div>
