feat: add link to ITMedia promotion.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -67,6 +67,12 @@ import TwitterFollow from "../components/TwitterFollow.astro";
                     <h2 class="card-title text-2xl mb-3">Recent Activity</h2>
                     <div class="time-line-container">
                         <TimeLine
+                            title="メディア取材 - ソリューション紹介"
+                            date="2023/5"
+                            link_title="Kaggle Masterのエンジニアと考える、企業におけるAI開発の“真の”課題と解決策"
+                            link_url="https://atmarkit.itmedia.co.jp/ait/articles/2305/19/news004.html"
+                        />
+                        <TimeLine
                             title="Informatica Certified Professional - Cloud Data and Application Integration"
                             date="2023/2"
                         />
