--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -67,6 +67,18 @@ import TwitterFollow from "../components/TwitterFollow.astro";
                     <h2 class="card-title text-2xl mb-3">Recent Activity</h2>
                     <div class="time-line-container">
                         <TimeLine
+                            title="イベント登壇 - HPE Discover More 東京 2023"
+                            date="2023/11"
+                            link_title="AIデータ分析プロジェクトの進め方とLLMカスタマイズの実践"
+                            link_url="https://www.hpe.com/jp/ja/events/discover-more-tokyo.html"
+                        />
+                        <TimeLine
+                            title="イベント登壇 - HPE HPC & AI フォーラム 2023 オンライン"
+                            date="2023/9"
+                            link_title="大規模言語モデル最前線！- HPE MLDEでLLMトレーニングをしてみた -"
+                            link_url="https://h50146.www5.hpe.com/events/seminars/info/hpcai2023.html"
+                        />
+                        <TimeLine
                             title="メディア取材 - ソリューション紹介"
                             date="2023/5"
                             link_title="Kaggle Masterのエンジニアと考える、企業におけるAI開発の“真の”課題と解決策"
@@ -97,36 +109,6 @@ import TwitterFollow from "../components/TwitterFollow.astro";
                             date="2022/4"
                             link_title="群馬大学 - AI人材育成とAI研究を加速、文理融合の新学部が挑むDX"
                             link_url="https://www.hpe.com/jp/ja/customer-case-studies/services-gunma-u.html"
-                        />
-                        <TimeLine
-                            title="Kaggle Competitions Expert"
-                            date="2021/8"
-                        />
-                        <TimeLine
-                            title="Kaggle Hungry Geese 🥇"
-                            date="2021/8"
-                            link_title="4th place solution"
-                            link_url="https://www.kaggle.com/c/hungry-geese/discussion/263690"
-                        />
-                        <TimeLine
-                            title="Kaggle Hungry Geese"
-                            date="2021/6"
-                            link_title="Congratulations to our Month 5 Winners - Goose luck!"
-                            link_url="https://www.kaggle.com/c/hungry-geese/discussion/248986"
-                        />
-                        <TimeLine
-                            title="Microsoft Certified Azure Administrator Associate (AZ-104)"
-                            date="2021/6"
-                        />
-                        <TimeLine
-                            title="Kaggle Cassava Leaf Disease Classification 🥈"
-                            date="2021/2"
-                            link_title="Private 28th, Public 8th, Thank you all, my first medal!"
-                            link_url="https://www.kaggle.com/c/cassava-leaf-disease-classification/discussion/220599"
-                        />
-                        <TimeLine
-                            title="AWS Certified Solutions Architect - Associate (AWS SAA)"
-                            date="2020/12"
                         />
                     </div>
                 </div>
