--- a/src/pages/tag/[tag].astro
+++ b/src/pages/tag/[tag].astro
@@ -37,7 +37,7 @@ const { posts } = Astro.props;
         <NavBar />
         <ToggleTheme />
         <main class="container mx-auto w-5/6 lg:w-2/3">
-            <!-- <AllTags /> -->
+            <AllTags />
             <h1 class="my-5 text-4xl font-bold">
                 <a href="/blog">Blog</a>
                 <a href="/rss.xml"
