feat: update profile.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -58,6 +58,7 @@ import TwitterFollow from "../components/TwitterFollow.astro";
                         <TimeLine title="Ski" />
                         <TimeLine title="Kaggle" />
                         <TimeLine title="Quiz" />
+                        <TimeLine title="Final Fantasy VII" />
                     </div>
                 </div>
             </div>
