feat: Add snow falling.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/components/BaseWallpaper.astro
+++ b/src/components/BaseWallpaper.astro
@@ -1,3 +1,9 @@
+---
+import Snow from "./Snow.astro";
+---
+
+<Snow />
+
 <div
     class="min-h-screen bg-cover bg-center bg-fixed"
     style="background-image: url(/wallpaper.png);"
