--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,15 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import HomeWallpaper from "../components/HomeWallpaper.astro";
-import ToggleTheme from "../components/ToggleTheme.astro";
-import { SITE_TITLE } from "../config";
+import BaseLayout from "../layouts/BaseLayout.astro"
+import HomeWallpaper from "../components/HomeWallpaper.astro"
+import ToggleTheme from "../components/ToggleTheme.astro"
+import { SITE_TITLE } from "../config"
 ---
+
+<style>
+    body {
+        overflow: hidden;
+    }
+</style>
 
 <BaseLayout>
     <HomeWallpaper>
@@ -11,8 +17,7 @@ import { SITE_TITLE } from "../config";
         <main>
             <h1 class="mb-5 text-4xl font-bold">{SITE_TITLE}</h1>
             <p class="mb-2 text-lg">
-                Hi, I'm SUGIYAMA Yoshio who is an infrastructure / ML engineer
-                at HPE. I like IMO and KURI.
+                Hi, I'm SUGIYAMA Yoshio who is an infrastructure / ML engineer at HPE. I like IMO and KURI.
             </p>
             <div class="tooltip tooltip-bottom" data-tip="About Me">
                 <a href="/about">
