--- a/src/styles/snow.scss
+++ b/src/styles/snow.scss
@@ -1,10 +1,9 @@
 @use "sass:math";
 
 body {
-  height: 100vh;
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-  overflow: hidden;
-  filter: drop-shadow(0 0 10px white);
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 @function random_range($min, $max) {
@@ -20,6 +19,7 @@ body {
   height: 10px;
   background: white;
   border-radius: 50%;
+  filter: drop-shadow(0 0 10px white);
 
   @for $i from 1 through $total {
     $random-x: random(1000000) * 0.0001vw;
