--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -40,12 +40,13 @@ import TwitterFollow from "../components/TwitterFollow.astro";
 
             <div class="card card-bordered shadow-lg my-10 bg-base-100">
                 <div class="card-body">
-                    <h2 class="card-title text-2xl mb-3">Focus</h2>
+                    <h2 class="card-title text-2xl mb-3">Skill</h2>
                     <div class="time-line-container">
                         <TimeLine title="Machine Learning, Deep Learning" />
                         <TimeLine title="Data Management" />
                         <TimeLine title="Kubernetes, OpenShift" />
                         <TimeLine title="Ansible" />
+                        <TimeLine title="Python" />
                         <TimeLine title="Neovim" />
                     </div>
                 </div>
