feat: update twitter icon.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,24 +1,22 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import BaseWallpaper from "../components/BaseWallpaper.astro";
-import Footer from "../components/Footer.astro";
-import NavBar from "../components/NavBar.astro";
-import TimeLine from "../components/TimeLine.astro";
-import ToggleTheme from "../components/ToggleTheme.astro";
-import TwitterFollow from "../components/TwitterFollow.astro";
+import BaseLayout from "../layouts/BaseLayout.astro"
+import BaseWallpaper from "../components/BaseWallpaper.astro"
+import Footer from "../components/Footer.astro"
+import NavBar from "../components/NavBar.astro"
+import TimeLine from "../components/TimeLine.astro"
+import ToggleTheme from "../components/ToggleTheme.astro"
+import TwitterFollow from "../components/TwitterFollow.astro"
 ---
 
-<BaseLayout twitter=true>
+<BaseLayout twitter="true">
     <BaseWallpaper>
         <NavBar />
         <ToggleTheme />
         <main class="container mx-auto w-5/6 lg:w-2/3">
             <h1 class="my-5 text-4xl font-bold">About Me</h1>
             <div class="avatar my-5">
-                <div
-                    class="w-24 rounded-full ring ring-accent ring-offset-base-100 ring-offset-2"
-                >
-                    <img src="/author.jpg" />
+                <div class="w-24 rounded-full ring ring-accent ring-offset-base-100 ring-offset-2">
+                    <img src="/author.jpg" alt="author" />
                 </div>
             </div>
             <h2 class="my-5 text-2xl">SUGIYAMA Yoshio - 杉山 禎夫</h2>
@@ -26,12 +24,12 @@ import TwitterFollow from "../components/TwitterFollow.astro";
                 日本ヒューレット・パッカードでインフラ/機械学習エンジニアをしています。
                 <br />
                 <br />
-                手を動かして、いろいろ検証することが好きで、いろいろな技術をかじっています。
+                 手を動かして、いろいろ検証することが好きで、いろいろな技術をかじっています。
                 世の中の変化を汲み取り、技術を正しくキャッチアップし、 活用する、
                 社会に届けることができるエンジニアでありたいです。
                 <br />
                 <br />
-                小さい頃からさつまいもとくりが好きです。なので、IMOKURI。
+                 小さい頃からさつまいもとくりが好きです。なので、IMOKURI。
             </div>
 
             <h2 class="my-5 text-2xl font-bold">Contact</h2>
@@ -90,10 +88,7 @@ import TwitterFollow from "../components/TwitterFollow.astro";
                             title="Informatica Certified Professional - Cloud Data and Application Integration"
                             date="2023/2"
                         />
-                        <TimeLine
-                            title="Kaggle Competitions Master"
-                            date="2022/11"
-                        />
+                        <TimeLine title="Kaggle Competitions Master" date="2022/11" />
                         <TimeLine
                             title="Kaggle Multimodal Single-Cell Integration 🥈"
                             date="2022/11"
