--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE_TITLE } from "../config";
+import { SITE_TITLE } from "../config"
 ---
 
 <header class="navbar bg-base-100">
@@ -8,10 +8,7 @@ import { SITE_TITLE } from "../config";
             <label tabindex="0" class="btn btn-ghost lg:hidden">
                 <i class="fa-solid fa-bars text-lg"></i>
             </label>
-            <ul
-                tabindex="0"
-                class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52"
-            >
+            <ul class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
                 <li>
                     <a href="/about"><i class="fa-solid fa-user"></i>About</a>
                 </li>
@@ -19,9 +16,7 @@ import { SITE_TITLE } from "../config";
                     <a href="/blog"><i class="fa-solid fa-pencil"></i>Blog</a>
                 </li>
                 <li>
-                    <a href="/project"
-                        ><i class="fa-solid fa-code"></i>Project</a
-                    >
+                    <a href="/project"><i class="fa-solid fa-code"></i>Project</a>
                 </li>
             </ul>
         </div>
@@ -49,7 +44,7 @@ import { SITE_TITLE } from "../config";
             target="_blank"
             class="btn btn-ghost btn-square text-lg"
             aria-label="Twitter"
-            title="Twitter"><i class="fa-brands fa-twitter"></i></a
+            title="Twitter"><i class="fa-brands fa-x-twitter"></i></a
         >
         <a
             href="https://kaggle.com/imokuri"
