style: use x instead of twitter
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -43,8 +43,8 @@ import { SITE_TITLE } from "../config"
             href="https://twitter.com/imokurity"
             target="_blank"
             class="btn btn-ghost btn-square text-lg"
-            aria-label="Twitter"
-            title="Twitter"><i class="fa-brands fa-x-twitter"></i></a
+            aria-label="X (旧Twitter)"
+            title="X (旧Twitter)"><i class="fa-brands fa-x-twitter"></i></a
         >
         <a
             href="https://kaggle.com/imokuri"
