--- a/src/components/Tweet.astro
+++ b/src/components/Tweet.astro
@@ -2,6 +2,6 @@
     <a
         href="https://twitter.com/share?ref_src=twsrc%5Etfw"
         class="twitter-share-button"
-        data-show-count="false">Tweet</a
+        data-show-count="false">Post</a
     >
 </div>
