--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -67,6 +67,12 @@ import TwitterFollow from "../components/TwitterFollow.astro"
                     <h2 class="card-title text-2xl mb-3">Recent Activity</h2>
                     <div class="time-line-container">
                         <TimeLine
+                            title="メディア取材 - ソリューション紹介"
+                            date="2024/3"
+                            link_title="知っておきたい「AIモデル開発」の裏側　専門家が考える“成功への近道”とは？"
+                            link_url="https://techtarget.itmedia.co.jp/tt/news/2403/07/news02.html"
+                        />
+                        <TimeLine
                             title="イベント登壇 - HPE Discover More 東京 2023"
                             date="2023/11"
                             link_title="AIデータ分析プロジェクトの進め方とLLMカスタマイズの実践"
