feat: add bluesky link
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -40,6 +40,13 @@ import { SITE_TITLE } from "../config"
             title="GitHub"><i class="fa-brands fa-github"></i></a
         >
         <a
+            href="https://bsky.app/profile/imokuri.com"
+            target="_blank"
+            class="btn btn-ghost btn-square text-lg"
+            aria-label="Bluesky"
+            title="Bluesky"><i class="fa-brands fa-bluesky"></i></a
+        >
+        <a
             href="https://twitter.com/imokurity"
             target="_blank"
             class="btn btn-ghost btn-square text-lg"
