--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -67,6 +67,12 @@ import TwitterFollow from "../components/TwitterFollow.astro"
                     <h2 class="card-title text-2xl mb-3">Recent Activity</h2>
                     <div class="time-line-container">
                         <TimeLine
+                            title="メディア取材 - キャリア紹介"
+                            date="2024/8"
+                            link_title="データ&AIスペシャリストの道を切り開く──最先端技術の追求を支えるHPEの魅力"
+                            link_url="https://www.talent-book.jp/hpe/stories/55214"
+                        />
+                        <TimeLine
                             title="メディア取材 - ソリューション紹介"
                             date="2024/3"
                             link_title="知っておきたい「AIモデル開発」の裏側　専門家が考える“成功への近道”とは？"
