--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -67,6 +67,10 @@ import TwitterFollow from "../components/TwitterFollow.astro"
                     <h2 class="card-title text-2xl mb-3">Recent Activity</h2>
                     <div class="time-line-container">
                         <TimeLine
+                            title="HPE Product Certified - AI and Machine Learning"
+                            date="2024/10"
+                        />
+                        <TimeLine
                             title="メディア取材 - キャリア紹介"
                             date="2024/8"
                             link_title="データ&AIスペシャリストの道を切り開く──最先端技術の追求を支えるHPEの魅力"
