feat: update profile
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,6 +4,6 @@ const today = new Date();
 
 <footer class="footer footer-center p-4">
   <div>
-    <p>© {today.getFullYear()} SUGIYAMA Yoshio</p>
+    <p>© {today.getFullYear()} Yoshio Sugiyama</p>
   </div>
 </footer>
