--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,17 +19,12 @@ import TwitterFollow from "../components/TwitterFollow.astro"
                     <img src="/author.jpg" alt="author" />
                 </div>
             </div>
-            <h2 class="my-5 text-2xl">SUGIYAMA Yoshio - 杉山 禎夫</h2>
+            <h2 class="my-5 text-2xl">Yoshio Sugiyama - 杉山 禎夫</h2>
             <div class="my-10 text-justify">
                 日本ヒューレット・パッカードでインフラ/機械学習エンジニアをしています。
                 <br />
                 <br />
-                 手を動かして、いろいろ検証することが好きで、いろいろな技術をかじっています。
-                世の中の変化を汲み取り、技術を正しくキャッチアップし、 活用する、
-                社会に届けることができるエンジニアでありたいです。
-                <br />
-                <br />
-                 小さい頃からさつまいもとくりが好きです。なので、IMOKURI。
+                 さつまいもとくりが好きです。
             </div>
 
             <h2 class="my-5 text-2xl font-bold">Contact</h2>
