--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import { SITE_TITLE } from "../config"
         <main>
             <h1 class="mb-5 text-4xl font-bold">{SITE_TITLE}</h1>
             <p class="mb-2 text-lg">
-                Hi, I'm SUGIYAMA Yoshio who is an infrastructure / ML engineer at HPE. I like IMO and KURI.
+                Hi, I'm Yoshio who is an infrastructure / ML engineer at HPE Japan. This is my personal website.
             </p>
             <div class="tooltip tooltip-bottom" data-tip="About Me">
                 <a href="/about">
